Add license to main crate

--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -3,6 +3,7 @@ name = "partons"
 version = "0.0.1"
 authors = ["Alessandro Candido <candido.ale@gmail.com>"]
 edition = "2021"
+license = "GPL-3.0-or-later"
 readme = "../README.md"
 keywords = ["high-energy-physics", "physics"]
 categories = ["science"]
