--- a/partons_py/Cargo.toml
+++ b/partons_py/Cargo.toml
@@ -18,4 +18,7 @@ name = "partons"
 crate-type = ["cdylib"]
 
 [dependencies]
+ndarray = "0.15.3"
+numpy = "0.16.2"
 partons = { path = "../partons", version = "0.0.1" }
+pyo3 = { features = ["extension-module"], version = "0.16.4" }
