--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -10,3 +10,7 @@ categories = ["science"]
 description = "Partons library"
 
 [dependencies]
+anyhow = "1.0"
+directories = "4.0"
+ndarray = "0.15"
+thiserror = "1.0"
