--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -14,6 +14,8 @@ anyhow = "1.0"
 directories = "4.0"
 itertools = "0.10.5"
 ndarray = "0.15"
+reqwest = "0.11.13"
 serde = { version = "1.0.151", features = ["derive"] }
 thiserror = "1.0"
+tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
