--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.10.5"
 ndarray = "0.15"
 reqwest = "0.11.13"
 serde = { version = "1.0.151", features = ["derive"] }
+serde_yaml = "0.9.16"
 thiserror = "1.0"
 tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
