--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -11,6 +11,7 @@ description = "Partons library"
 
 [dependencies]
 anyhow = "1.0"
+bytes = { version = "1.3.0", features = ["serde"] }
 directories = "4.0"
 itertools = "0.10.5"
 ndarray = "0.15"
