--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -8,10 +8,12 @@ readme = "../README.md"
 keywords = ["high-energy-physics", "physics"]
 categories = ["science"]
 description = "Partons library"
+rust-version = "1.65.0"
 
 [dependencies]
 anyhow = "1.0"
 bytes = { version = "1.3.0", features = ["serde"] }
+cxx = "1.0.89"
 directories = "4.0"
 itertools = "0.10.5"
 ndarray = "0.15"
@@ -21,3 +23,14 @@ serde_yaml = "0.9.16"
 thiserror = "1.0"
 tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
+
+[build-dependencies]
+cxx-build = "1.0.89"
+pkg-config = "0.3.26"
+
+[features]
+default = ["lhapdf"]
+lhapdf = []
+
+[package.metadata.docs.rs]
+features = []
