--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,11 @@
 [workspace]
-
 members = ["partons", "partons_py"]
+
+[workspace.package]
+categories = ["science"]
+edition = "2021"
+keywords = ["high-energy-physics", "physics"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/AleCandido/partons"
+rust-version = "1.65.0"
+version = "0.0.1"
