--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "partons"
-version = "0.0.1"
 authors = ["Alessandro Candido <candido.ale@gmail.com>"]
-edition = "2021"
-license = "GPL-3.0-or-later"
-readme = "../README.md"
-keywords = ["high-energy-physics", "physics"]
-categories = ["science"]
 description = "Partons library"
-rust-version = "1.65.0"
+name = "partons"
+readme = "../README.md"
+
+categories.workspace = true
+edition.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [dependencies]
 anyhow = "1.0"
