--- a/partons_py/Cargo.toml
+++ b/partons_py/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "partons_py"
-version = "0.0.1"
 authors = ["Alessandro Candido <candido.ale@gmail.com>"]
-edition = "2021"
-license = "GPL-3.0-or-later"
-repository = "https://github.com/AleCandido/partons"
-readme = "../README.md"
-keywords = ["high-energy-physics", "physics"]
-categories = ["science"]
 description = "Partons library"
+name = "partons_py"
+readme = "../README.md"
+
+categories.workspace = true
+edition.workspace = true
+keywords.workspace = true
+license.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
 
 [package.metadata.maturin]
 name = "partons"
