--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -15,8 +15,10 @@ version.workspace = true
 [dependencies]
 anyhow = "1.0"
 bytes = { version = "1.3.0", features = ["serde"] }
-cxx = "1.0.89"
+cfg-if = "1.0.0"
+cxx = { optional = true, version = "1.0.89" }
 directories = "4.0"
+enum_dispatch = "0.3.11"
 itertools = "0.10.5"
 ndarray = "0.15"
 reqwest = "0.11.13"
@@ -27,12 +29,8 @@ tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
 
 [build-dependencies]
-cxx-build = "1.0.89"
-pkg-config = "0.3.26"
+cxx-build = { optional = true, version = "1.0.89" }
+pkg-config = { optional = true, version = "0.3.26" }
 
 [features]
-default = ["lhapdf"]
-lhapdf = []
-
-[package.metadata.docs.rs]
-features = []
+lhapdf = ["dep:cxx", "dep:cxx-build", "dep:pkg-config"]
