--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -21,6 +21,7 @@ directories = "4.0"
 enum_dispatch = "0.3.11"
 itertools = "0.10.5"
 ndarray = "0.15"
+regex = "1.8.4"
 reqwest = "0.11.13"
 serde = { version = "1.0.151", features = ["derive"] }
 serde_yaml = "0.9.16"
