--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -20,7 +20,7 @@ cxx = { optional = true, version = "1.0.89" }
 directories = "4.0"
 enum_dispatch = "0.3.11"
 itertools = "0.10.5"
-ndarray = "0.15"
+ndarray = { version = "0.15.6", features = ["serde"] }
 regex = "1.8.4"
 reqwest = "0.11.13"
 serde = { version = "1.0.151", features = ["derive"] }
