--- a/partons/lhapdf/Cargo.toml
+++ b/partons/lhapdf/Cargo.toml
@@ -15,7 +15,10 @@ version.workspace = true
 [dependencies]
 anyhow = "1.0"
 bytes = { version = "1.3.0", features = ["serde"] }
+cfg-if = "1.0.0"
+cxx = { optional = true, version = "1.0.89" }
 directories = "4.0"
+enum_dispatch = "0.3.11"
 itertools = "0.10.5"
 ndarray = { version = "0.15.6", features = ["serde"] }
 regex = "1.8.4"
@@ -25,3 +28,10 @@ serde_yaml = "0.9.16"
 thiserror = "1.0"
 tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
+
+[build-dependencies]
+cxx-build = { optional = true, version = "1.0.89" }
+pkg-config = { optional = true, version = "0.3.26" }
+
+[features]
+lhapdf = ["dep:cxx", "dep:cxx-build", "dep:pkg-config"]
