--- a/partons.toml
+++ b/partons.toml
@@ -3,3 +3,4 @@ name = "lhapdf"
 url = "https://lhapdfsets.web.cern.ch/lhapdfsets/current/"
 index = "https://lhapdfsets.web.cern.ch/lhapdfsets/current/pdfsets.index"
 patterns = { info = "{name}/{name}.info", grids = "{name}.tar.gz" }
+format = "lhapdf"
