--- a/partons-py/Cargo.toml
+++ b/partons-py/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Alessandro Candido <candido.ale@gmail.com>"]
 description = "Partons library"
-name = "partons_py"
+name = "partons-py"
 readme = "../README.md"
 
 categories.workspace = true
