--- a/partons-cli/Cargo.toml
+++ b/partons-cli/Cargo.toml
@@ -17,6 +17,7 @@ version.workspace = true
 anyhow = "1.0.71"
 clap = { version = "4.3.3", features = ["derive", "cargo"] }
 partons = { path = "../partons", version = "0.0.1" }
+serde_json = "1.0.96"
 
 
 [[bin]]
