--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -14,6 +14,7 @@ version.workspace = true
 
 [dependencies]
 anyhow = "1.0"
+bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 bytes = { version = "1.3.0", features = ["serde"] }
 directories = "4.0"
 itertools = "0.10.5"
