--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -17,12 +17,14 @@ anyhow = "1.0"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 bytes = { version = "1.3.0", features = ["serde"] }
 directories = "4.0"
+flate2 = "1.0.26"
 itertools = "0.10.5"
 ndarray = { version = "0.15.6", features = ["serde"] }
 regex = "1.8.4"
 reqwest = "0.11.13"
 serde = { version = "1.0.151", features = ["derive"] }
 serde_yaml = "0.9.16"
+tar = "0.4.38"
 thiserror = "1.0"
 tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.10"
