--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -19,6 +19,7 @@ bytes = { version = "1.3.0", features = ["serde"] }
 directories = "4.0"
 flate2 = "1.0.26"
 itertools = "0.10.5"
+lazy_static = "1.4.0"
 ndarray = { version = "0.15.6", features = ["serde"] }
 regex = "1.8.4"
 reqwest = "0.11.13"
