--- a/partons/Cargo.toml
+++ b/partons/Cargo.toml
@@ -16,6 +16,7 @@ version.workspace = true
 anyhow = "1.0"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 bytes = { version = "1.3.0", features = ["serde"] }
+csv = "1.2.2"
 directories = "4.0"
 flate2 = "1.0.26"
 itertools = "0.10.5"
