--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -4,6 +4,11 @@ coverage:
   precision: 2
   round: down
   range: "70...100"
+  status:
+    project:
+      default:
+        threshold: 2%
+        if_ci_failed: success
 
 parsers:
   gcov:
