--- a/partons-py/pyproject.toml
+++ b/partons-py/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["maturin>=0.12,<0.13"]
+requires = ["maturin>=0.13.4"]
 build-backend = "maturin"
 
 [project]
 name = "partons"
-requires-python = ">=3.6"
+requires-python = ">=3.8"
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Science/Research",
